# AI-Code-Reviewer

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.local.md  DEPLOYMENT.md  Dockerfile  README.md  entrypoint.sh  pyproject.toml  worker.py
.github/: SETUP.md
.github/workflows/: deploy.yml  lint.yml  test.yml
.groundup/: TICKETS.md  session-state.json
Coding Conventions/: documents.yaml
docs/: DOCKER.md  GITHUB_APP_SETUP.md
scripts/: backfill_repo.py  clear_index.py  index_documents.py  setup_codebase_index.py  setup_pinecone.py  test_github_app_auth.py  test_rag.py
src/: __init__.py  main.py
src/agents/: __init__.py  code_reviewer.py  conversation_agent.py
src/api/: dependencies.py  webhooks.py
src/api/handlers/: __init__.py  conversation_handler.py  pr_merge_handler.py  pr_review_handler.py  webhook_event_handlers.py
src/config/: __init__.py  settings.py
src/database/: __init__.py  db.py
src/models/: __init__.py  conversation.py  dependencies.py  github_types.py  outputs.py  review_state.py
src/prompts/: __init__.py  code_reviewer_prompt.py  conversation_agent_prompt.py  fix_generation_prompt.py
src/queue/: __init__.py  config.py
src/services/: __init__.py  codebase_index_service.py  github_auth.py  github_search_service.py  github_service.py  rabbitmq_service.py  rag_service.py
src/tools/: __init__.py  codebase_search_tools.py  conversation_tools.py  github_search_tools.py  github_tools.py  rag_tools.py
src/utils/: __init__.py  comment_state.py  comment_tracker.py  filters.py  logging.py  rate_limiter.py
src/workers/: reindex_worker.py
tests/: conftest.py
tests/evals/: __init__.py  test_review_quality.py
tests/evals/fixtures/: .gitkeep
tests/integration/: test_database.py  test_end_to_end.py  test_webhooks.py
tests/integration/test_api/: test_webhooks.py
tests/unit/: test_config_settings.py  test_conversation_handler.py  test_github_auth.py  test_process_pr_review.py  test_webhooks_queue.py  test_worker.py
tests/unit/test_agents/: test_code_reviewer.py  test_conversation_agent.py
tests/unit/test_config/: test_config_settings.py  test_github_auth.py
tests/unit/test_endpoints/: test_health.py  test_queue_endpoints.py
tests/unit/test_handler/: test_force_push_detection.py  test_pr_merge_handler.py  test_pr_review_handler.py
tests/unit/test_models/: test_dependencies.py
tests/unit/test_redis_worker/: test_webhooks_queue.py  test_webhooks_synchronize.py
tests/unit/test_services/: test_codebase_index_service.py  test_github_search_service.py  test_github_service.py  test_rabbitmq_service.py  test_rag_service.py
tests/unit/test_tools/: test_codebase_search_tools.py  test_conversation_tools.py  test_github_search_tools.py  test_github_tools.py  test_pr_review_handler.py  test_rag_tools.py
tests/unit/test_utils/: test_comment_state.py  test_comment_tracker.py
tests/unit/test_workers/: test_backfill_repo.py  test_reindex_worker.py
